--- a/cybermart/src/main/resources/application.properties
+++ b/cybermart/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/cybermartdb?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/cybermartdbx?useSSL=false
 # &useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 spring.datasource.username=ifeka
